fix styles of bus on mobile devices

--- a/src/bus/Bus.module.sass
+++ b/src/bus/Bus.module.sass
@@ -59,7 +59,7 @@
     .bus
         margin-top: 120px;
         flex-direction: column;
-        width: 260px;
+        width: 240px;
         height: auto;
     .busDriversCab
         width: 100%;
@@ -80,12 +80,12 @@
         top: 80px;
         left: 30%;
     .busSalonPassenger
-        width: 260px;
+        width: 240px;
         height: 640px;
         flex-direction: column;
     .seatsRow
         flex-direction: row;
-        width: 240px;
+        width: 220px;
         justify-content: space-around;
         align-items: center;
     .steeringWwheel
